# autoclass-warns-20241008

./: README.md  pyproject.toml  tox.ini
docs/: conf.py  index.rst  requirements.txt
src/mypackage/: __init__.py
