[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mypackage"
version = "0.0.0"
description = "MVCE for a bug in autoclasstoc with recent Sphinx"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = { paths = ["LICENSE"] }
authors = [
    { name = "John Thorvald Wodder II", email = "autoclass-warns-20241008@varonathe.org" }
]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "tox.ini",
]
